# livecheck

livecheck/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
livecheck/.github/workflows/: ci.yml
livecheck/docs/: cli.md  extending.md  features.md  getting-started.md  index.md  patterns.md
livecheck/livecheck/: __init__.py  __main__.py  advanced.py  advanced.pyi  checker.py  checker.pyi  cli.py  compiler.py  compiler.pyi  core.py  core.pyi  extras.py  extras.pyi  patterns_v4.py  pipeline.py  pipeline.pyi  ruleset.py  ruleset.pyi  tools.py  tools.pyi
livecheck/livecheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
livecheck/livecheck_language.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
livecheck/scripts/: bump_version.py  check_release.py
livecheck/tests/: conftest.py  test_core.py  test_features.py  test_patterns.py
