# ─────────────────────────────────────────────────────────────────────────────
# livecheck — pyproject.toml
# Build with:  python -m build
# Publish with: twine upload dist/*
# ─────────────────────────────────────────────────────────────────────────────

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ── Project metadata ──────────────────────────────────────────────────────────

[project]
name        = "livecheck"
version     = "0.5.0"
description = "Natural language data validation — write rules in plain English, handle typos, validate files, generate data, watch live objects"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies    = []          # zero runtime dependencies

authors = [
    { name = "livecheck contributors" },
]

keywords = [
    "validation", "data-validation", "natural-language", "schema",
    "pydantic-alternative", "cerberus-alternative", "type-checking",
    "fuzzy-matching", "i18n", "cli", "pipeline",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: French",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]

[project.urls]
Homepage      = "https://github.com/yourname/livecheck"
Documentation = "https://github.com/yourname/livecheck#readme"
Repository    = "https://github.com/yourname/livecheck"
Issues        = "https://github.com/yourname/livecheck/issues"
Changelog     = "https://github.com/yourname/livecheck/blob/main/CHANGELOG.md"

# ── CLI entry point ───────────────────────────────────────────────────────────

[project.scripts]
livecheck = "livecheck.cli:main"

# ── Optional extras ───────────────────────────────────────────────────────────

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "build>=1.0",
    "twine>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

# ── Package discovery ─────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where   = ["."]
include = ["livecheck*"]

[tool.setuptools.package-data]
livecheck = ["py.typed"]

# ── Ruff (linter) ─────────────────────────────────────────────────────────────

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select  = ["E", "F", "W", "I", "UP"]
ignore  = ["E501"]   # line length handled separately

# ── MyPy (type checker) ───────────────────────────────────────────────────────

[tool.mypy]
python_version         = "3.10"
strict                 = false
ignore_missing_imports = true
warn_return_any        = true
warn_unused_ignores    = true

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths       = ["tests"]
asyncio_mode    = "auto"
addopts         = "-v --tb=short"

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["livecheck"]
omit   = ["tests/*", "livecheck/__main__.py"]

[tool.coverage.report]
show_missing  = true
skip_covered  = false
fail_under    = 80
